--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ final
 <div class="navbar navbar-inverse navbar-static-top">
 <div class="container">
 <a href="" class="navbar-brand">
-Tech Site
+Text Site
 </a>
 <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 <span class="icon-bar"></span>
