--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Text Site
 <div class="collapse navbar-collapse navHeaderCollapse">
 <ul class="nav navbar-nav navbar-right">
 <li class="active"><a href="">Home</a></li>
-<li><a href="">Blog</a></li>
+<li><a href="">Features</a></li>
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media <b class="caret"></b></a>
 <ul class="dropdown-menu">
@@ -33,7 +33,6 @@ Text Site
 </ul>
 </li>
 <li><a href="">About</a></li>
-<li><a href="">Contact</a></li>
 </ul>
 </div>
 </div>
