--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ Text Site
 </button>
 <div class="collapse navbar-collapse navHeaderCollapse">
 <ul class="nav navbar-nav navbar-right">
-<li class="active"><a href="">Home</a></li>
-<li><a href="">Features</a></li>
+<li class="active"><a href="https://akshais.github.io/final/index.html">Home</a></li>
+<li><a href="https://akshais.github.io/final/features.html">Features</a></li>
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media <b class="caret"></b></a>
 <ul class="dropdown-menu">
