--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ bootstrap 3
 <body>
 <div class="navbar navbar-inverse navbar-static-top">
 <div class="container">
-<a href="" class="navbar-brand">
+<a href="https://akshais.github.io/final/index.html" class="navbar-brand">
 Text Site
 </a>
 <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
@@ -22,7 +22,7 @@ Text Site
 <div class="collapse navbar-collapse navHeaderCollapse">
 <ul class="nav navbar-nav navbar-right">
 <li class="active"><a href="">Home</a></li>
-<li><a href="">Features</a></li>
+<li><a href="https://akshais.github.io/final/features.html">Features</a></li>
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media <b class="caret"></b></a>
 <ul class="dropdown-menu">
