--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ bootstrap 3
 <div class="navbar navbar-inverse navbar-static-top">
 <div class="container">
 <a href="https://akshais.github.io/final/index.html" class="navbar-brand">
-Text Site
+Bootstrap Advertisement Site
 </a>
 <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 <span class="icon-bar"></span>
@@ -21,7 +21,7 @@ Text Site
 </button>
 <div class="collapse navbar-collapse navHeaderCollapse">
 <ul class="nav navbar-nav navbar-right">
-<li class="active"><a href="">Home</a></li>
+<li class="active"><a href="https://akshais.github.io/final/index.html">Home</a></li>
 <li><a href="https://akshais.github.io/final/features.html">Features</a></li>
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media <b class="caret"></b></a>
@@ -39,15 +39,12 @@ Text Site
 </div>
 <div class="container">
 <div class="jumbotron text-center">
-<h1>Text Here</h1>
+<h1>This site was made using Bootstrap</h1>
 <p>
-More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here 
+Design and functionality are both incorporated into the masterpiece of coding that is Bootstrap. It cuts down the time for desiging a page very significantly. Buttons and popups and modals and so many more things can be easiy accessed using this framework.
 </p>
 <a href="" class="btn btn-default">
-Watch Now
-</a>
-<a href="" class="btn btn-info">
-Tweet It
+Watch it in action
 </a>
 </div>
 </div>
