--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Bootstrap Advertisement Site
 <div class="jumbotron text-center">
 <h1>This site was made using Bootstrap</h1>
 <p>
-Looks professional, doesn't it? Design and functionality are both incorporated into the masterpiece of coding that is Bootstrap. It cuts down the time for desiging a page very significantly. Buttons, popup boxes, and so many more things can be easiy utilized with this framework.
+Looks professional, doesn't it? Design and functionality are both incorporated into the masterpiece of coding that is Bootstrap. It cuts down the time for desiging a page very significantly. Buttons, popup boxes, and so many more things can be easily utilized with this framework.
 </p>
 <a href="https://www.youtube.com/watch?v=YXVoqJEwqoQ" class="btn btn-default">
 Watch it in action
