--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Watch it in action
 </div>
 <div class="navbar navbar-default navbar-fixed-bottom">
 <div class="container">
-<p class="navbar-text pull-left">Site built by Akshai</p>
+<p class="navbar-text pull-left">I don't own Bootstrap</p>
 <a href="" class="navbar-btn btn-danger btn pull-right">Official Site Here</a>
 </div>
 </div>
