--- a/features.html
+++ b/features.html
@@ -12,7 +12,7 @@ bootstrap 3
 <div class="navbar navbar-inverse navbar-static-top">
 <div class="container">
 <a href="" class="navbar-brand">
-Text Site
+Bootstrap Advertisement Site
 </a>
 <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 <span class="icon-bar"></span>
@@ -49,7 +49,7 @@ Text Site
 </div>
 <div class="navbar navbar-default navbar-fixed-bottom">
 <div class="container">
-<p class="navbar-text pull-left">Site built by Akshai</p>
+<p class="navbar-text pull-left">I don't own Bootstrap</p>
 <a href="" class="navbar-btn btn-danger btn pull-right">Official Site Here</a>
 </div>
 </div>
