--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Watch it in action
 <div class="navbar navbar-default navbar-fixed-bottom">
 <div class="container">
 <p class="navbar-text pull-left">I don't own Bootstrap</p>
-<a href="" class="navbar-btn btn-danger btn pull-right">Official Site Here</a>
+<a href="http://getbootstrap.com/" class="navbar-btn btn-danger btn pull-right">Official Site Here</a>
 </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
