--- a/features.html
+++ b/features.html
@@ -11,7 +11,7 @@ bootstrap 3
 <body>
 <div class="navbar navbar-inverse navbar-static-top">
 <div class="container">
-<a href="" class="navbar-brand">
+<a href="https://akshais.github.io/final/index.html" class="navbar-brand">
 Bootstrap Advertisement Site
 </a>
 <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
@@ -41,8 +41,8 @@ Bootstrap Advertisement Site
 <div class="row">
 <div class="col-lg-9">
 <div class="panel panel-default">
-<h4>Test</h4>
-<p>Bootstrap is a free collection of tools for creating websites and web applications. It contains HTML and CSS-based design templates for typography, forms, buttons, navigation and other interface components, as well as optional JavaScript extensions.</p>
+<h4>Bootstrap makes your life easier</h4>
+<p>Bootstrap is a free and open source project that is on Github. One feature of Bootstrap is the Jumbotron. This is the large box on the home page that said "This site was made using Bootstrap." You can use normal text, headings, buttons, and other things in the Jumbotron. Another feature of Bootstrap is the header bar that is present on every page of this site. The header bar can fit on both a computer screen and a mobile screen because it detects the screen size and then changes to a single button if it is too small.</p>
 </div>
 </div>
 </div>
@@ -50,7 +50,7 @@ Bootstrap Advertisement Site
 <div class="navbar navbar-default navbar-fixed-bottom">
 <div class="container">
 <p class="navbar-text pull-left">I don't own Bootstrap</p>
-<a href="" class="navbar-btn btn-danger btn pull-right">Official Site Here</a>
+<a href="http://getbootstrap.com/" class="navbar-btn btn-danger btn pull-right">Official Site Here</a>
 </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
