--- a/features.html
+++ b/features.html
@@ -26,7 +26,7 @@ Bootstrap Advertisement Site
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media <b class="caret"></b></a>
 <ul class="dropdown-menu">
-<li><a href="">Twitter</a></li>
+<li><a href="https://twitter.com/getbootstrap?lang=en">Twitter</a></li>
 <li><a href="">Facebook</a></li>
 <li><a href="">Google+</a></li>
 <li><a href="">Instagram</a></li>
