--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Watch it in action
 <div class="container">
 <div class="row">
 <div class="col-md-3">
-<h3><a href="">Features</a></h3>
+<h3><a href="https://akshais.github.io/final/features.html">Features</a></h3>
 <p>Bootstrap is a free and open source project that is on Github. One feature of Bootstrap is the Jumbotron. This is the large box on the home page that said "This site was made using Bootstrap." You can use normal text, headings, buttons, and other things in the Jumbotron. Another feature of Bootstrap is the header bar that is present on every page of this site. The header bar can fit on both a computer screen and a mobile screen because it detects the screen size and then changes to a single button if it is too small. Another feature of bootstrap is the modal, or popup box. This box dulls the rest of the... </p>
 </div>
 <div class="col-md-3">
