--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Bootstrap Advertisement Site
 </ul>
 </li>
 <li><a href="">About</a></li>
-<li><a href="#contact">Contact</a></li>
+<li><a href="#contact" data-toggle="modal">Contact</a></li>
 </ul>
 </div>
 </div>
