--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@ Watch it in action
 <a href="http://getbootstrap.com/" class="navbar-btn btn-danger btn pull-right">Official Site Here</a>
 </div>
 </div>
+<div class="modal fade">
+<div class="modal-dialog">
+<div class="modal-content">
+<div class="modal-header">
+<p>Contact Me</p>
+</div>
+</div>
+</div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
