--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Watch it in action
 <a href="http://getbootstrap.com/" class="navbar-btn btn-danger btn pull-right">Official Site Here</a>
 </div>
 </div>
-<div class="modal fade">
+<div class="modal fade" id="contact" role="dialog">
 <div class="modal-dialog">
 <div class="modal-content">
 <div class="modal-header">
