--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Watch it in action
 <div class="modal-dialog">
 <div class="modal-content">
 <div class="modal-header">
-<p>Contact Me</p>
+<h4>Contact Me</h4>
 </div>
 </div>
 </div>
