--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@ Watch it in action
 <div class="modal-header">
 <h4>Contact Me</h4>
 </div>
+<div class="modal-body">
+<p>text here</p>
+</div>
+<div class="modal-footer">
+Text here
+</div>
 </div>
 </div>
 </div>
