--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@ Watch it in action
 <p>text here</p>
 </div>
 <div class="modal-footer">
-Text here
+<a class="btn btn-default">
+Close
+</a>
 </div>
 </div>
 </div>
