--- a/index.html
+++ b/index.html
@@ -75,17 +75,21 @@ Watch it in action
 <div class="modal fade" id="contact" role="dialog">
 <div class="modal-dialog">
 <div class="modal-content">
+<form class="form horizontal">
 <div class="modal-header">
 <h4>Contact Me</h4>
 </div>
 <div class="modal-body">
-<p>text here</p>
+<div class="form-group">
+<label for="contact-name" class="col-lg-2 control-label">Name:</label>
+</div>
 </div>
 <div class="modal-footer">
 <a class="btn btn-default">
 Close
 </a>
 </div>
+</form>
 </div>
 </div>
 </div>
