--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@ Watch it in action
 <div class="modal-body">
 <div class="form-group">
 <label for="contact-name" class="col-lg-2 control-label">Name:</label>
+<div class="col-lg-10">
 <input type="text" class="form-control" id="contact-name" placeholder="Full Name">
+</div>
 </div>
 </div>
 <div class="modal-footer">
