--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@ Watch it in action
 <input type="text" class="form-control" id="contact-name" placeholder="Full Name">
 </div>
 </div>
+<div class="form-group">
+<label for="contact-email" class="col-lg-2 control-label">Email:</label>
+<div class="col-lg-10">
+<input type="email" class="form-control" id="contact-name" placeholder="Full Name">
+</div>
+</div>
 </div>
 <div class="modal-footer">
 <a class="btn btn-default">
