--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Watch it in action
 <div class="form-group">
 <label for="contact-email" class="col-lg-2 control-label">Email:</label>
 <div class="col-lg-10">
-<input type="email" class="form-control" id="contact-name" placeholder="Full Name">
+<input type="email" class="form-control" id="contact-name" placeholder="you@emailwebsite.com">
 </div>
 </div>
 </div>
