--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@ Watch it in action
 <input type="email" class="form-control" id="contact-name" placeholder="you@emailwebsite.com">
 </div>
 </div>
+<div class="form-group">
+<label for="contact-name" class="col-lg-2 control-label">Message:</label>
+<div class="col-lg-10">
+<textarea></textarea>
+</div>
+</div>
 </div>
 <div class="modal-footer">
 <a class="btn btn-default">
