--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Watch it in action
 <div class="form-group">
 <label for="contact-name" class="col-lg-2 control-label">Message:</label>
 <div class="col-lg-10">
-<textarea></textarea>
+<textarea class="form-control"></textarea>
 </div>
 </div>
 </div>
