--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ Watch it in action
 <a class="btn btn-default">
 Close
 </a>
+<button class="btn btn-primary" type="submit">Send</button>
 </div>
 </form>
 </div>
