--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Watch it in action
 </div>
 </div>
 <div class="modal-footer">
-<a class="btn btn-default">
+<a  href="https://akshais.github.io/final/index.html" class="btn btn-default">
 Close
 </a>
 <button class="btn btn-primary" type="submit">Send</button>
