--- a/features.html
+++ b/features.html
@@ -52,6 +52,43 @@ Bootstrap Advertisement Site
 <a href="http://getbootstrap.com/" class="navbar-btn btn-danger btn pull-right">Official Site Here</a>
 </div>
 </div>
+<div class="modal fade" id="contact" role="dialog">
+<div class="modal-dialog">
+<div class="modal-content">
+<form class="form horizontal">
+<div class="modal-header">
+<h4>Contact Me</h4>
+</div>
+<div class="modal-body">
+<div class="form-group">
+<label for="contact-name" class="col-lg-2 control-label">Name:</label>
+<div class="col-lg-10">
+<input type="text" class="form-control" id="contact-name" placeholder="Full Name">
+</div>
+</div>
+<div class="form-group">
+<label for="contact-email" class="col-lg-2 control-label">Email:</label>
+<div class="col-lg-10">
+<input type="email" class="form-control" id="contact-name" placeholder="you@emailwebsite.com">
+</div>
+</div>
+<div class="form-group">
+<label for="contact-name" class="col-lg-2 control-label">Message:</label>
+<div class="col-lg-10">
+<textarea class="form-control"></textarea>
+</div>
+</div>
+</div>
+<div class="modal-footer">
+<a  href="https://akshais.github.io/final/index.html" class="btn btn-default">
+Close
+</a>
+<button class="btn btn-primary" type="submit">Send</button>
+</div>
+</form>
+</div>
+</div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
