--- a/features.html
+++ b/features.html
@@ -80,7 +80,7 @@ Bootstrap Advertisement Site
 </div>
 </div>
 <div class="modal-footer">
-<a  href="https://akshais.github.io/final/index.html" class="btn btn-default">
+<a  href="https://akshais.github.io/final/features.html" class="btn btn-default">
 Close
 </a>
 <button class="btn btn-primary" type="submit">Send</button>
