--- a/features.html
+++ b/features.html
@@ -44,6 +44,9 @@ Bootstrap Advertisement Site
 <p>Bootstrap is a free and open source project that is on Github. One feature of Bootstrap is the Jumbotron. This is the large box on the home page that said "This site was made using Bootstrap." You can use normal text, headings, buttons, and other things in the Jumbotron. Another feature of Bootstrap is the header bar that is present on every page of this site. The header bar can fit on both a computer screen and a mobile screen because it detects the screen size and then changes to a single button if it is too small. Another feature of bootstrap is the modal, or popup box. This box dulls the rest of the screen and covers part of it. It can hold the same things as a Jumbotron. That is what was used for the contact box. Bootstrap in general makes websites look nicer and cleaner. You can use an list  do almost anything, like make an article sidebar like the one that is here. You can even put things into boundaries like this article is.</p>
 </div>
 </div>
+<div class="col-lg-3">
+Test
+</div>
 </div>
 </div>
 <div class="navbar navbar-default navbar-fixed-bottom">
