--- a/features.html
+++ b/features.html
@@ -45,7 +45,11 @@ Bootstrap Advertisement Site
 </div>
 </div>
 <div class="col-lg-3">
+<div class="list-group">
+<a href="" class="list-group-item">
 Test
+</a>
+</div>
 </div>
 </div>
 </div>
