--- a/features.html
+++ b/features.html
@@ -47,7 +47,8 @@ Bootstrap Advertisement Site
 <div class="col-lg-3">
 <div class="list-group">
 <a href="" class="list-group-item">
-Test
+<h4 class="list-group-item-heading">Lorem Ipsum</h4>
+<p>Bootstrap is a free and open source project</p>
 </a>
 </div>
 </div>
