--- a/features.html
+++ b/features.html
@@ -48,7 +48,7 @@ Bootstrap Advertisement Site
 <div class="list-group">
 <a href="" class="list-group-item">
 <h4 class="list-group-item-heading">Lorem Ipsum</h4>
-<p>Bootstrap is a free and open source project</p>
+<p class="list-group-item-text">Bootstrap is a free and open source project</p>
 </a>
 </div>
 </div>
