--- a/features.html
+++ b/features.html
@@ -46,7 +46,7 @@ Bootstrap Advertisement Site
 </div>
 <div class="col-lg-3">
 <div class="list-group">
-<a href="" class="list-group-item">
+<a href="" class="list-group-item active">
 <h4 class="list-group-item-heading">Lorem Ipsum</h4>
 <p class="list-group-item-text">Bootstrap is a free and open source project</p>
 </a>
