--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ Bootstrap Advertisement Site
 <ul class="nav navbar-nav navbar-right">
 <li class="active"><a href="https://akshais.github.io/final/index.html">Home</a></li>
 <li><a href="https://akshais.github.io/final/features.html">Features</a></li>
+<li><a href="https://akshais.github.io/final/usage.html">Usage</a></li>
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media <b class="caret"></b></a>
 <ul class="dropdown-menu">
