--- a/usage.html
+++ b/usage.html
@@ -1,1 +1,104 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>
+bootstrap 3
+</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/styles.css" rel="stylesheet">
+</head>
+<body>
+<div class="navbar navbar-inverse navbar-static-top">
+<div class="container">
+<a href="https://akshais.github.io/final/index.html" class="navbar-brand">
+Bootstrap Advertisement Site
+</a>
+<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
+<div class="collapse navbar-collapse navHeaderCollapse">
+<ul class="nav navbar-nav navbar-right">
+<li><a href="https://akshais.github.io/final/index.html">Home</a></li>
+<li class="active"><a href="https://akshais.github.io/final/features.html">Features</a></li>
+<li class="dropdown">
+<a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media <b class="caret"></b></a>
+<ul class="dropdown-menu">
+<li><a href="https://twitter.com/getbootstrap?lang=en">Twitter</a></li>
+</ul>
+</li>
+<li><a href="">About</a></li>
+<li><a href="#contact" data-toggle="modal">Contact</a></li>
+</ul>
+</div>
+</div>
+</div>
+<div class="container">
+<div class="row">
+<div class="col-lg-9">
+<div class="panel panel-default">
+<h4>Usage Statistics</h4>
+<img src="">
+<p>Bootstrap has been used to make many websites for all purposes. The number of websites built with Bootstrap has increased by 4 million sites in the last year. This trend suggests that Bootstrap will become more commonly used in the coming years, especially with the advent of mobile devices. Around 1,300 or 13% of the top 10,000 most visited sites are made using Bootstrap, and 18% of the top million sites are made using Bootstrap.</p>
+</div>
+</div>
+<div class="col-lg-3">
+<div class="list-group">
+<a href="" class="list-group-item active">
+<h4 class="list-group-item-heading">Lorem Ipsum</h4>
+<p class="list-group-item-text">Bootstrap is a free and open source project</p>
+</a>
+</div>
+</div>
+</div>
+</div>
+<div class="navbar navbar-default navbar-fixed-bottom">
+<div class="container">
+<p class="navbar-text pull-left">I don't own Bootstrap</p>
+<a href="http://getbootstrap.com/" class="navbar-btn btn-danger btn pull-right">Official Site Here</a>
+</div>
+</div>
+<div class="modal fade" id="contact" role="dialog">
+<div class="modal-dialog">
+<div class="modal-content">
+<form class="form horizontal">
+<div class="modal-header">
+<h4>Contact Me</h4>
+</div>
+<div class="modal-body">
+<div class="form-group">
+<label for="contact-name" class="col-lg-2 control-label">Name:</label>
+<div class="col-lg-10">
+<input type="text" class="form-control" id="contact-name" placeholder="Full Name">
+</div>
+</div>
+<div class="form-group">
+<label for="contact-email" class="col-lg-2 control-label">Email:</label>
+<div class="col-lg-10">
+<input type="email" class="form-control" id="contact-name" placeholder="you@emailwebsite.com">
+</div>
+</div>
+<div class="form-group">
+<label for="contact-name" class="col-lg-2 control-label">Message:</label>
+<div class="col-lg-10">
+<textarea class="form-control"></textarea>
+</div>
+</div>
+</div>
+<div class="modal-footer">
+<a  href="https://akshais.github.io/final/features.html" class="btn btn-default">
+Close
+</a>
+<button class="btn btn-primary" type="submit">Send</button>
+</div>
+</form>
+</div>
+</div>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+</body>
+</html>
 
