--- a/usage.html
+++ b/usage.html
@@ -22,7 +22,8 @@ Bootstrap Advertisement Site
 <div class="collapse navbar-collapse navHeaderCollapse">
 <ul class="nav navbar-nav navbar-right">
 <li><a href="https://akshais.github.io/final/index.html">Home</a></li>
-<li class="active"><a href="https://akshais.github.io/final/features.html">Features</a></li>
+<li><a href="https://akshais.github.io/final/features.html">Features</a></li>
+<li class="active"><a href="https://akshais.github.io/final/usage.html">Usage</a></li>
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media <b class="caret"></b></a>
 <ul class="dropdown-menu">
