--- a/features.html
+++ b/features.html
@@ -23,6 +23,7 @@ Bootstrap Advertisement Site
 <ul class="nav navbar-nav navbar-right">
 <li><a href="https://akshais.github.io/final/index.html">Home</a></li>
 <li class="active"><a href="https://akshais.github.io/final/features.html">Features</a></li>
+<li><a href="https://akshais.github.io/final/usage.html">Usage</a></li>
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media <b class="caret"></b></a>
 <ul class="dropdown-menu">
@@ -47,8 +48,12 @@ Bootstrap Advertisement Site
 <div class="col-lg-3">
 <div class="list-group">
 <a href="" class="list-group-item active">
-<h4 class="list-group-item-heading">Lorem Ipsum</h4>
-<p class="list-group-item-text">Bootstrap is a free and open source project</p>
+<h4 class="list-group-item-heading">Features</h4>
+<p class="list-group-item-text">A list of the features of Bootstrap</p>
+</a>
+<a href="" class="list-group-item">
+<h4 class="list-group-item-heading">Usage</h4>
+<p class="list-group-item-text">Statistics of the usage of Bootstrap</p>
 </a>
 </div>
 </div>
