--- a/usage.html
+++ b/usage.html
@@ -48,8 +48,8 @@ Bootstrap Advertisement Site
 <div class="col-lg-3">
 <div class="list-group">
 <a href="" class="list-group-item active">
-<h4 class="list-group-item-heading">Lorem Ipsum</h4>
-<p class="list-group-item-text">Bootstrap is a free and open source project</p>
+<h4 class="list-group-item-heading">Features</h4>
+<p class="list-group-item-text">A list of the features of Bootstrap</p>
 </a>
 </div>
 </div>
