--- a/usage.html
+++ b/usage.html
@@ -47,9 +47,13 @@ Bootstrap Advertisement Site
 </div>
 <div class="col-lg-3">
 <div class="list-group">
-<a href="" class="list-group-item active">
+<a href="https://akshais.github.io/final/features.html" class="list-group-item">
 <h4 class="list-group-item-heading">Features</h4>
 <p class="list-group-item-text">A list of the features of Bootstrap</p>
+</a>
+<a href="https://akshais.github.io/final/usage.html" class="list-group-item active">
+<h4 class="list-group-item-heading">Usage</h4>
+<p class="list-group-item-text">Statistics of the usage of Bootstrap</p>
 </a>
 </div>
 </div>
