--- a/usage.html
+++ b/usage.html
@@ -41,7 +41,7 @@ Bootstrap Advertisement Site
 <div class="col-lg-9">
 <div class="panel panel-default">
 <h4>Usage Statistics</h4>
-<img src="">
+<img src="bootstrapusage.png">
 <p>Bootstrap has been used to make many websites for all purposes. The number of websites built with Bootstrap has increased by 4 million sites in the last year. This trend suggests that Bootstrap will become more commonly used in the coming years, especially with the advent of mobile devices. Around 1,300 or 13% of the top 10,000 most visited sites are made using Bootstrap, and 18% of the top million sites are made using Bootstrap.</p>
 </div>
 </div>
