--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Watch it in action
 <p>Bootstrap is a free and open source project that is on Github. One feature of Bootstrap is the Jumbotron. This is the large box on the home page that said "This site was made using Bootstrap." You can use normal text, headings, buttons, and other things in the Jumbotron. Another feature of Bootstrap is the header bar that is present on every page of this site. The header bar can fit on both a computer screen and a mobile screen because it detects the screen size and then changes to a single button if it is too small. Another feature of bootstrap is the modal, or popup box. This box dulls the rest of the... </p>
 </div>
 <div class="col-md-3">
-<h3><a href="">Usage</a></h3>
+<h3><a href="https://akshais.github.io/final/usage.html">Usage</a></h3>
 <p>Bootstrap has been used to make many websites for all purposes. The number of websites built with Bootstrap has increased by 4 million sites in the last year. This trend suggests that Bootstrap will become more commonly used in the coming years, especially with the advent of mobile devices. Around 1,300 or 13% of the top 10,000 most visited sites are made using Bootstrap, and 18% of the top million sites are made using Bootstrap... </p>
 </div>
 <div class="col-md-3">
