--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Bootstrap Advertisement Site
 <li><a href="https://twitter.com/getbootstrap?lang=en">Twitter</a></li>
 </ul>
 </li>
-<li><a href="">History</a></li>
+<li><a href="https://akshais.github.io/final/history.html">History</a></li>
 <li><a href="#contact" data-toggle="modal">Contact</a></li>
 </ul>
 </div>
