--- a/history.html
+++ b/history.html
@@ -40,9 +40,9 @@ Bootstrap Advertisement Site
 <div class="row">
 <div class="col-lg-9">
 <div class="panel panel-default">
-<h4></h4>
-<img src="">
-<p></p>
+<h4>A History of Bootstrap</h4>
+<img src="twitter.png">
+<p>Bootstrap was initially called Twitter Blueprint, and was created by Mark Otto and Jacob Thornton. Their goal was to have consistency in web development tools. Before the development of Bootstrap, many different tools were used, which led to inconsistency. It was originated by a small group of developers in order to make a better internal tool. Later, many people began to contribute during a hack week, which was a hackathon styled event at Twitter. It was then maintained by a small group of developers. </p>
 </div>
 </div>
 <div class="col-lg-3">
