--- a/features.html
+++ b/features.html
@@ -55,6 +55,10 @@ Bootstrap Advertisement Site
 <h4 class="list-group-item-heading">Usage</h4>
 <p class="list-group-item-text">Statistics of the usage of Bootstrap</p>
 </a>
+<a href="https://akshais.github.io/final/history.html" class="list-group-item">
+<h4 class="list-group-item-heading">History</h4>
+<p class="list-group-item-text">A History of Bootstrap</p>
+</a>
 </div>
 </div>
 </div>
