--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ Watch it in action
 <p>Bootstrap has been used to make many websites for all purposes. The number of websites built with Bootstrap has increased by 4 million sites in the last year. This trend suggests that Bootstrap will become more commonly used in the coming years, especially with the advent of mobile devices. Around 1,300 or 13% of the top 10,000 most visited sites are made using Bootstrap, and 18% of the top million sites are made using Bootstrap... </p>
 </div>
 <div class="col-md-3">
-<h3><a href="">$500 pc</a></h3>
-<p>More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here More text here </p>
+<h3><a href="">History</a></h3>
+<p> </p>
 </div>
 <div class="col-md-3">
 <h3><a href="">$500 pc</a></h3>
