--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Watch it in action
 </div>
 <div class="col-md-3">
 <h3><a href="">History</a></h3>
-<p> </p>
+<p>Bootstrap was initially called Twitter Blueprint, and was created by Mark Otto and Jacob Thornton. Their goal was to have consistency in web development tools. Before the development of Bootstrap, many different tools were used, which led to inconsistency. It was originated by a small group of developers in order to make a better internal tool. Later, many people began to contribute during a hack week, which was a hackathon styled event at Twitter...</p>
 </div>
 <div class="col-md-3">
 <h3><a href="">$500 pc</a></h3>
