--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Watch it in action
 <p>Bootstrap has been used to make many websites for all purposes. The number of websites built with Bootstrap has increased by 4 million sites in the last year. This trend suggests that Bootstrap will become more commonly used in the coming years, especially with the advent of mobile devices. Around 1,300 or 13% of the top 10,000 most visited sites are made using Bootstrap, and 18% of the top million sites are made using Bootstrap... </p>
 </div>
 <div class="col-md-3">
-<h3><a href="">History</a></h3>
+<h3><a href="https://akshais.github.io/final/history.html">History</a></h3>
 <p>Bootstrap was initially called Twitter Blueprint, and was created by Mark Otto and Jacob Thornton. Their goal was to have consistency in web development tools. Before the development of Bootstrap, many different tools were used, which led to inconsistency. It was originated by a small group of developers in order to make a better internal tool. Later, many people began to contribute during a hack week, which was a hackathon styled event at Twitter...</p>
 </div>
 <div class="col-md-3">
