--- a/index.html
+++ b/index.html
@@ -63,6 +63,24 @@ Watch it in action
 </div>
 </div>
 </div>
+<div id="myCarousel" class="carousel">
+<ol class="carousel-indicators">
+<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+<li data-target="#myCarousel" data-slide-to="1"></li>
+<li data-target="#myCarousel" data-slide-to="2"></li>
+</ol>
+<div class="carousel-inner">
+<div class="item active">
+<img src="bootstraplogo.png" alt="logo" class="img-responsive"
+</div>
+<div class="item">
+<img src="" alt="stats" class="img-responsive"
+</div>
+<div class="item">
+<img src="bootstraplogo.png" alt="twitter" class="img-responsive"
+</div>
+</div>
+</div>
 <div class="navbar navbar-default navbar-fixed-bottom">
 <div class="container">
 <p class="navbar-text pull-left">I don't own Bootstrap</p>
