--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Watch it in action
 </div>
 </div>
 </div>
-<div id="myCarousel" class="carousel">
+<div id="myCarousel" class="carousel slide">
 <ol class="carousel-indicators">
 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -71,15 +71,21 @@ Watch it in action
 </ol>
 <div class="carousel-inner">
 <div class="item active">
-<img src="bootstraplogo.png" alt="logo" class="img-responsive"
+<img src="bootstraplogo.jpg" alt="logo" class="img-responsive"
 </div>
 <div class="item">
-<img src="" alt="stats" class="img-responsive"
+<img src="bootstrapusage.png" alt="stats" class="img-responsive"
 </div>
 <div class="item">
-<img src="bootstraplogo.png" alt="twitter" class="img-responsive"
+<img src="twitter.png" alt="twitter" class="img-responsive"
 </div>
 </div>
+<a class="carousel-control left" href="#myCarousel" data-slide="prev">
+<span class="icon-prev"></span>
+</a>
+<a class="carousel-control right" href="#myCarousel" data-slide="next">
+<span class="icon-next"></span>
+</a>
 </div>
 <div class="navbar navbar-default navbar-fixed-bottom">
 <div class="container">
