--- a/index.html
+++ b/index.html
@@ -71,13 +71,22 @@ Watch it in action
 </ol>
 <div class="carousel-inner">
 <div class="item active">
-<img src="bootstraplogo.jpg" alt="logo" class="img-responsive"
+<img src="bootstraplogo.jpg" alt="logo" class="img-responsive">
+<div class="carousel-caption">
+<h3>Features</h3>
+</div>
 </div>
 <div class="item">
-<img src="bootstrapusage.png" alt="stats" class="img-responsive"
+<img src="bootstrapusage.png" alt="stats" class="img-responsive">
+<div class="carousel-caption">
+<h3>Statistics</h3>
+</div>
 </div>
 <div class="item">
-<img src="twitter.png" alt="twitter" class="img-responsive"
+<img src="twitter.png" alt="twitter" class="img-responsive">
+<div class="carousel-caption">
+<h3>History</h3>
+</div>
 </div>
 </div>
 <a class="carousel-control left" href="#myCarousel" data-slide="prev">
