--- a/index.html
+++ b/index.html
@@ -63,6 +63,39 @@ Watch it in action
 </div>
 </div>
 </div>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<ol class="carousel-indicators">
+<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+</ol>
+<div class="carousel-inner">
+<div class="item active">
+<img src="bootstraplogo.jpg" alt="logo" width:100%;>
+<div class="carousel-caption">
+<h3>Features</h3>
+</div>
+</div>
+<div class="item">
+<img src="boostrapusage.png" alt="statistics" width:100%;>
+<div class="carousel-caption">
+<h3>Statistics</h3>
+</div>
+</div>
+<div class="item">
+<img src="twitter.png" alt="twitter" width:100%;>
+<div class="carousel-caption">
+<h3>History</h3>
+</div>
+</div>
+</div>
+<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+<span class="glyphicon glyphicon-chevron-left"></span>
+</a>
+<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+<span class="glyphicon glyphicon-chevron-right"></span>
+</a>
+</div> 
 <div class="navbar navbar-default navbar-fixed-bottom">
 <div class="container">
 <p class="navbar-text pull-left">I don't own Bootstrap</p>
