--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Watch it in action
 </div>
 </div>
 <div class="item">
-<img src="bootstrapusage.png" alt="statistics" width:100%;>
+<img src="bootstrapusage.png" alt="statistics" width:100%; height:100px;>
 <div class="carousel-caption">
 <h3>Statistics</h3>
 </div>
