--- a/features.html
+++ b/features.html
@@ -9,7 +9,7 @@ bootstrap 3
 <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-<div class="navbar navbar-inverse navbar-static-top">
+<div class="navbar navbar-default navbar-static-top">
 <div class="container">
 <a href="https://akshais.github.io/final/index.html" class="navbar-brand">
 Bootstrap Advertisement Site
