--- a/history.html
+++ b/history.html
@@ -6,7 +6,7 @@ bootstrap 3
 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/styles.css" rel="stylesheet">
+<link href="css/stylesone.css" rel="stylesheet">
 </head>
 <body>
 <div class="navbar navbar-default navbar-static-top">
