--- a/history.html
+++ b/history.html
@@ -97,7 +97,7 @@ Bootstrap Advertisement Site
 </div>
 </div>
 <div class="modal-footer">
-<a  href="https://akshais.github.io/final/features.html" class="btn btn-default">
+<a  href="https://akshais.github.io/final/history.html" class="btn btn-default">
 Close
 </a>
 <button class="btn btn-primary" type="submit">Send</button>
