--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@ Watch it in action
 <div class="item active">
 <img src="bootstraplogo.jpg" alt="logo" width:100%;>
 <div class="carousel-caption">
-<h3>Features</h3>
+<h3><a href="https://akshais.github.io/final/features.html">Features</a></h3>
 </div>
 </div>
 <div class="item">
 <img src="bootstrapusage.png" alt="statistics" width:100%; height:100px;>
 <div class="carousel-caption">
-<h3>Statistics</h3>
+<h3><a href="https://akshais.github.io/final/usage.html">Statistics</a></h3>
 </div>
 </div>
 <div class="item">
 <img src="twitter.png" alt="twitter" width:100%;>
 <div class="carousel-caption">
-<h3>History</h3>
+<h3><a href="https://akshais.github.io/final/history.html">History</a></h3>
 </div>
 </div>
 </div>
