--- a/history.html
+++ b/history.html
@@ -42,7 +42,7 @@ Bootstrap Advertisement Site
 <div class="panel panel-default">
 <h4>A History of Bootstrap</h4>
 <img src="twitter.png" width: 100px;>
-<p>Bootstrap was initially called Twitter Blueprint, and was created by Mark Otto and Jacob Thornton. Their goal was to have consistency in web development tools. Before the development of Bootstrap, many different tools were used, which led to inconsistency. It was originated by a small group of developers in order to make a better internal tool. Later, many people began to contribute during a hack week, which was a hackathon styled event at Twitter. It was then maintained by a small group of developers. </p>
+<p>Bootstrap was initially called Twitter Blueprint, and was created by Mark Otto and Jacob Thornton. Their goal was to have consistency in web development tools. Before the development of Bootstrap, many different tools were used, which led to inconsistency. It was originated by a small group of developers in order to make a better internal tool. Later, many people began to contribute during a hack week, which was a hackathon styled event at Twitter. It was then maintained by a small group of developers. Afterwards, Bootstrap 2 was launched. It featured the 12 column grid system. Bootstrap 3 introduced the responsive system which made it work better for mobile devices. The alpha of Bootstrap 4 was launched last year.</p>
 </div>
 </div>
 <div class="col-lg-3">
