--- a/usage.html
+++ b/usage.html
@@ -42,7 +42,7 @@ Bootstrap Advertisement Site
 <div class="panel panel-default">
 <h4>Usage Statistics</h4>
 <img src="bootstrapusage.png">
-<p>Bootstrap has been used to make many websites for all purposes. The number of websites built with Bootstrap has increased by 4 million sites in the last year. This trend suggests that Bootstrap will become more commonly used in the coming years, especially with the advent of mobile devices. Around 1,300 or 13% of the top 10,000 most visited sites are made using Bootstrap, and 18% of the top million sites are made using Bootstrap.</p>
+<p>Bootstrap has been used to make many websites for all purposes. The number of websites built with Bootstrap has increased by 4 million sites in the last year. This trend suggests that Bootstrap will become more commonly used in the coming years, especially with the advent of mobile devices. Around 1,300 or 13% of the top 10,000 most visited sites are made using Bootstrap, and 18% of the top million sites are made using Bootstrap. Due to Bootstrap being a relatively recent creation, its usage will probably increase even more in the coming years.</p>
 </div>
 </div>
 <div class="col-lg-3">
